attempt CSS fix on daily schedule pages where text scroll was visible above header

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -170,6 +170,7 @@ nav a {
   width: 30px;
   height: 30px;
   margin-top: 4pt;
+  padding-top: 30px;
   color: aliceblue;
   position: fixed;
   z-index: 10;
@@ -199,10 +200,14 @@ nav a {
 }
 
 .dailyScheduleContainer {
-  margin-top: 0;
+  /* padding-top: 50px; */
   margin-bottom: 30px;
   margin-left: 0;
 
+}
+
+.dailyScheduleHeaderContainer {
+  padding-bottom: 55pt;
 }
 
 
@@ -217,7 +222,7 @@ nav a {
   font-weight: bold;  
   background-color: #ffffff;
   margin-top: 0%;
-  padding-top: 0%;
+  padding-top: 30px;
 }
 
 .tapProgramNameToListen {
